# jk-mcp-nwsl

./: .commitlintrc.yaml  .dockerignore  .gitignore  .semantic-release.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  tasks.py
.github/workflows/: badge.yml  ci.yml  evals.yml  release.yml
docs/: quickstart.md
docs/decisions/: 0001-deploy-to-fly-io.md
src/nwsl/: server.py
src/nwsl/adapters/inbound/: authorization.py  formatters.py  mcp_adapter.py
src/nwsl/adapters/inbound/tools/: _base.py  analytics.py  cms.py  espn.py  sdp.py
src/nwsl/adapters/outbound/: caching_adapter.py  cms_adapter.py  espn_adapter.py  parsers.py  retry_adapter.py  sdp_adapter.py  sdp_caching_adapter.py  sdp_parsers.py  sdp_retry_adapter.py  season_discovery.py
src/nwsl/application/: _analytics_helpers.py  _helpers.py  service.py
src/nwsl/domain/: exceptions.py  models.py
src/nwsl/observability/: __init__.py  tracing.py
src/nwsl/ports/: inbound.py  outbound.py
src/nwsl/security/: __init__.py  jwks.py  token_verifier.py
tests/: conftest.py  test_application_service.py  test_authorization.py  test_caching_adapter.py  test_cms_adapter.py  test_dispatch_authorized.py  test_domain_models.py  test_espn_adapter.py  test_eval_judge.py  test_mcp_adapter.py  test_retry_adapter.py  test_sdp_adapter.py  test_sdp_wrappers.py  test_season_discovery.py  test_server.py  test_token_verifier.py  test_tool_annotations.py  test_tracing.py
tests/evals/: __init__.py  conftest.py  judge.py  runner.py  scenario_loader.py  test_scenarios.py
tests/evals/scenarios/: standings_basic.yaml  team_lookup.yaml
