[project]
name = "jk-mcp-nwsl"
version = "0.5.0"
description = "MCP server for NWSL data via the ESPN public API"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    # OpenTelemetry — wired by nwsl.observability.tracing.setup_tracing.
    # The SDK and exporters are imported lazily so a deployment with
    # MCP_TRACING_ENABLED unset pays no cold-start cost, but the
    # dependency closure must still be present at install time so the
    # opt-in path works without a separate `pip install`.
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-starlette>=0.48b0",
    # PyJWT[crypto] — wired by nwsl.security.token_verifier when
    # MCP_AUTH_ENABLED=true. The cryptography extra brings in the
    # backends PyJWT needs to verify RS256 signatures from the
    # auth-server JWKS endpoint. Pinned to a recent minor so PyJWK
    # support is stable (added in 2.4).
    "pyjwt[crypto]>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jk-mcp-nwsl = "nwsl.server:main"

[dependency-groups]
dev = [
    "invoke>=2.2",
    "py-cyclo",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-bdd>=7.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tests/bdd"]
pythonpath = ["src"]
markers = ["smoke: critical path tests for quick validation", "bdd: integration tests"]

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/nwsl"]
